production/backend-prod.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: production
  name: backend
  labels:
    app: nodejs
    tier: backend
spec:
  ports:
  - port: 4000
    targetPort: 4000
    name: backend
  selector:
    app: nodejs
    tier: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: production
  name: backend
  labels:
    app: nodejs
    tier: backend
spec:
  selector:
    matchLabels:
      app: nodejs
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: nodejs
        tier: backend
    spec:
      containers:
      - name: backend
        image: nubie13/backend-sp3:1
        ports:
        - containerPort: 4000
        volumeMounts:
        - name: pass-db
          mountPath: "/usr/src/app/.env"
          subPath: ".env"
          readOnly: true
      volumes:
      - name: pass-db
        secret:
          secretName: mongo-secret
