production/frontend-prod.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: production
  name: frontend
  labels:
    app: nodejs
    tier: frontend
spec:
  ports:
  - port: 80
    targetPort: 80
    name: frontend
  selector:
    app: nodejs
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: production
  name: frontend
  labels:
    app: nodejs
    tier: frontend
spec:
  selector:
    matchLabels:
      app: nodejs
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: nodejs
        tier: frontend
    spec:
      containers:
      - name: frontend
        image: nubie13/frontend-prod-sp3:1
        ports:
        - containerPort: 80
