production/mongo-prod.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: production
  name: mongo
  labels:
    app: mongo
    tier: db
spec:
  ports:
  - port: 27017
    name: mongo
  selector:
    app: mongo
    tier: db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: production
  name: mongo
  labels:
    app: mongo
    tier: db
spec:
  serviceName: mongo
  replicas: 1
  selector:
    matchLabels:
      app: mongo
      tier: db
  template:
    metadata:
      labels:
        app: mongo
        tier: db
    spec:
      containers:
      - name: mongo
        image: nubie13/mongo-sp3:1
        ports:
        - containerPort: 27017
          name: mongo
        volumeMounts:
        - name: data
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      storageClassName: default
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
