production/ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoapp-ingress-production
  namespace: production
spec:
  ingressClassName: nginx
  rules:
  - host: todo-prod.smallproject.my.id
    http:
      paths:
      - backend:
          service:
            name: frontend
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: backend
            port:
              number: 4000
        path: /todos
        pathType: Prefix
